# phonetics

./: Cargo.toml  README.md
src/: lib.rs  metaphon.rs  nysiis.rs
tests/: metaphone.rs  nysiis.rs
