[package]
name = "phonetics"
keywords = ["phonetics", "metaphone", "nysiis", "match rating approach"]
description = "Phonetic algorithms for encoding and comparing strings."
license = "MIT"
categories = ["algorithms", "text-processing"]
version = "0.1.0"
edition = "2024"
authors = ["Shubham singh	<github: github.com/shubhexists>"]
repository = "https://github.com/shubhexists/phonetics"
readme = "README.md"

[dependencies]
regex = "1.11.1"
dashmap = "6.1.0"
